# snowflake-semantic-view-validator

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  flake.nix  minimal.yaml  speedrun.yaml
.github/workflows/: release.yml
examples/: complete_example.yaml  regenerate_expected.rs
src/: colored_doc.rs  lib.rs  main.rs
tests/: integration_test.rs
tests/fixtures/: invalid_empty_module_instructions.expected  invalid_empty_module_instructions.yaml  invalid_missing_name.expected  invalid_missing_name.yaml  invalid_no_tables.expected  invalid_no_tables.yaml  invalid_yaml_syntax.expected  invalid_yaml_syntax.yaml  valid_basic.expected  valid_basic.yaml  valid_composite_join_keys.expected  valid_composite_join_keys.yaml  valid_composite_primary_key.expected  valid_composite_primary_key.yaml  valid_composite_primary_key_three_columns.expected  valid_composite_primary_key_three_columns.yaml  valid_legacy_custom_instructions.expected  valid_legacy_custom_instructions.yaml  valid_module_custom_instructions.expected  valid_module_custom_instructions.yaml  valid_multiple_queries.expected  valid_multiple_queries.yaml  valid_multiple_relationships.expected  valid_multiple_relationships.yaml  valid_with_relationships.expected  valid_with_relationships.yaml
