[package]
name = "snowflake-semantic-view-validator"
version = "0.1.0"
edition = "2021"

[lib]
name = "snowflake_semantic_view_validator"
path = "src/lib.rs"

[[bin]]
name = "ssvv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
colored = "2.1"
